--- a/config/biostar-config.properties
+++ b/config/biostar-config.properties
@@ -1,6 +1,6 @@
 #FICHERO DE CONFIGURACIÓN
-#Tue Jan 27 16:32:13 COT 2015
-password=qgQzyd5qUFqEEWdrYT5KKg\=\=
-url=jdbc\:sqlserver\://127.0.0.1\\JUPITER\:49417;databaseName\=db_biostar;sendTimeAsDateTime\=false
+#Fri Feb 20 12:55:13 COT 2015
+url=jdbc\:sqlserver\://172.20.20.30\\SQLEXPRESS\:50875;databaseName\=BioStar;sendTimeAsDateTime\=false
+password=7zHNKQKw7ec\=
 tipo=1
-usuario=usuarioAsistencia
+usuario=sa
